# prompt-tune-rag-bench

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
data/clean/: document-library.md  emergency-casualty-protocol.md  faq-appointments-and-channelling.md  faq-inpatient-admission.md  faq-insurance-and-payments.md  faq-laboratory-tests-and-results.md  faq-surgery-and-preoperative-care.md  inpatient-admission-handbook.md  insurance-payments-billing-policy.md  laboratory-diagnostic-services-catalog.md  opd-services-directory.md  pharmacy-services-info.md  surgical-procedures-pricing.md
data/index/: corpus.faiss  corpus.jsonl
data/interim/: sections.jsonl
data/qa/: MANIFEST.md  pool.jsonl  test.jsonl  train.jsonl  verify_sheet.md
docs/: README.md  cost-analysis.md  phase-a.md  phase-b.md  phase-c.md  phase-d.md
report/: reflection.md  summary.md
results/: answers.jsonl  finetune_jobs.json  judge_batch.json  master_table.csv  rag_config.json  scores.csv  train_openai.jsonl
src/: authored_pairs.py
src/build_dataset/: __init__.py  __main__.py  clean.py  config.py  generate.py  segment.py  split.py
src/contenders/: __init__.py  __main__.py  answers.py  clients.py  config.py  estimate.py  finetune.py  models.py  prompt.py  rag.py  reset.py  runner.py  status.py
src/judge/: __init__.py  __main__.py  aggregate.py  batch.py  config.py  estimate.py  rubric.py  scores.py  sources.py  status.py
